<resources>
    <string name="app_name">でぐろぐ</string>

    <!-- 単語 -->
    <string name="date">日付</string>
    <string name="name">名前</string>
    <string name="weight">体重</string>
    <string name="length">体長</string>
    <string name="note">ノート</string>
    <string name="todo">ToDo</string>
    <string name="previous">前回</string>
    <string name="next">次回</string>
    <string name="recent">最近</string>
    <string name="add">追加</string>
    <string name="type">種類</string>
    <string name="gender">性別</string>
    <string name="gender_male">オス</string>
    <string name="gender_female">メス</string>
    <string name="gender_unknown">不明</string>
    <string name="birthday">誕生日</string>
    <string name="apply">適用</string>
    <string name="filter">フィルタ</string>
    <string name="label">ラベル</string>
    <string name="dot">・</string>
    <string name="asterisk">*</string>

    <!-- ナビゲーション -->
    <string name="bottom_nav_diary">日誌</string>
    <string name="bottom_nav_chart">グラフ</string>
    <string name="bottom_nav_profiles">ペット情報</string>
    <string name="menu_delete">削除</string>
    <string name="menu_edit">編集</string>
    <string name="menu_list">一覧</string>

    <!-- タイトル -->
    <string name="title_dashboard">ダッシュボード</string>
    <string name="title_diary_detail">詳細</string>
    <string name="title_diary_detail_at_name">の詳細</string>
    <string name="title_chart">グラフ</string>
    <string name="title_profiles">ペット情報</string>
    <string name="title_weight">― 体重 ―</string>
    <string name="title_length">― 体長 ―</string>
    <string name="title_note">― ノート ―</string>
    <string name="title_todo">― ToDo ―</string>

    <!-- ダッシュボード -->
    <string name="load_diaries">日誌の読込中…</string>
    <string name="load_profiles">プロフィールの読込中…</string>
    <string name="load_names">名前リストの取得中…</string>
    <string name="notify_todo">未確認のTODOがあります</string>
    <string name="add_new_todo">ToDoの追加</string>
    <string name="add_new_diary">新しい日誌の追加</string>

    <!-- 日誌詳細 -->
    <string name="exclude_blank">空白を除く</string>

    <!-- 日誌追加 -->
    <string name="title_new_diary">- New Diary -</string>
    <string name="title_edit_diary">- Edit Diary -</string>
    <string name="hint_name">名前*</string>
    <string name="hint_number">0.0</string>
    <string name="record">記録</string>
    <string name="name_do_not_edit">*名前は編集できません</string>
    <string name="enter_name">名前を入力してください</string>
    <string name="registered_name">登録済みの名前です</string>
    <string name="enter_number_up_one">１項目以上入力してください</string>
    <string name="registered_diary">日誌を登録しました</string>
    <string name="edited_diary">日誌を更新しました</string>
    <string name="registered_diary_and_profile">日誌とプロフィールを登録しました</string>

    <!-- グラフ -->
    <string name="select_chart">縦軸</string>
    <string name="select_axis">横軸</string>
    <string name="select_pets">表示するペット</string>
    <string name="time">時間</string>
    <string name="age">年齢</string>
    <string name="recorded">記録順</string>

    <!-- プロフィール追加 -->
    <string name="title_new_profile">- New Profile -</string>
    <string name="title_edit_profile">- Edit Profile -</string>
    <string name="hint_weight_unit">体重の単位</string>
    <string name="hint_length_unit">体長の単位</string>
    <string name="register_profile">プロフィールの登録</string>
    <string name="registered_profile">プロフィールを登録しました</string>
    <string name="edited_prodile">プロフィールを更新しました</string>

    <!-- メッセージ -->
    <string name="name_empty_error_string">名前は入力必須項目です</string>
    <string name="dashboard_empty">データがありません\n右上の＋マークから追加できます！</string>
    <string name="nothing_todo">Todoはありません</string>
    <string name="nothing_memo">メモはありません</string>
    <string name="nothing_data">表示するデータがありません</string>

    <!-- 画像の説明 -->
    <string name="icon_of_todo">ToDoアイコン</string>
    <string name="icon_of_notify">通知アイコン</string>
    <string name="icon_of_previous">前回</string>
    <string name="icon_of_next">次回</string>
    <string name="icon_of_has_memo">メモあり</string>
    <string name="icon_of_filter_open">フィルターを開く</string>

    <!-- ダイアログ関係 -->
    <string name="dialog_tag">dialogTag</string>
    <string name="dialog_yes">はい</string>
    <string name="dialog_no">いいえ</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_registered">登録</string>
    <string name="dialog_success">完了</string>
    <string name="dialog_cancel">キャンセル</string>
    <string name="dialog_back">戻る</string>
    <string name="dialog_delete_title">削除しますか？</string>
    <string name="dialog_delete_message">この操作は取り消せません</string>
    <string name="dialog_delete_success">削除しました</string>
    <string name="dialog_save_title">上書きしますか？</string>
    <string name="dialog_save_message">データを上書き保存します</string>
    <string name="dialog_save_success">上書き保存しました</string>
    <string name="choice_unit">単位の選択</string>
    <string name="choice_date">単位の選択</string>
    <string name="choice_type">種類の選択</string>
    <string name="choice_pet">ペットの選択</string>

    <!-- 動物の種類 -->
    <string name="type_small">小型</string>
    <string name="type_medium">中型</string>
    <string name="type_big">大型</string>
    <string name="type_bird">鳥類</string>
    <string name="type_etc">その他</string>

    <string name="animal_ushi">牛</string>
    <string name="animal_uma">馬</string>
    <string name="animal_buta">豚</string>
    <string name="animal_hitsuji">羊</string>
    <string name="animal_yagi">ヤギ</string>
    <string name="animal_inu">犬</string>
    <string name="animal_neko">猫</string>
    <string name="animal_kitsune">キツネ</string>
    <string name="animal_tanuki">タヌキ</string>
    <string name="animal_usagi">ウサギ</string>
    <string name="animal_degu">デグー</string>
    <string name="animal_chinchira">チンチラ</string>
    <string name="animal_hamster">ハムスター</string>
    <string name="animal_harinezumi">ハリネズミ</string>
    <string name="animal_nezumi">マウス・ラット</string>
    <string name="animal_marmot">モルモット</string>
    <string name="animal_risu">リス</string>
    <string name="animal_momonga">モモンガ</string>
    <string name="animal_inko">インコ類</string>
    <string name="animal_finchi">フィンチ類</string>
    <string name="animal_moukin">猛禽類</string>
    <string name="animal_hachurui">爬虫類</string>
    <string name="animal_gyorui">魚類</string>
    <string name="animal_konchu">昆虫</string>
    <string name="hyphen">-</string>

    <string-array name="types">
        <item>@string/type_small</item>
        <item>@string/type_medium</item>
        <item>@string/type_big</item>
        <item>@string/type_bird</item>
        <item>@string/type_etc</item>
    </string-array>

    <string-array name="types_big">
        <item>@string/animal_ushi</item>
        <item>@string/animal_uma</item>
        <item>@string/animal_buta</item>
        <item>@string/animal_hitsuji</item>
        <item>@string/animal_yagi</item>
    </string-array>

    <string-array name="types_medium">
        <item>@string/animal_inu</item>
        <item>@string/animal_neko</item>
        <item>@string/animal_kitsune</item>
        <item>@string/animal_tanuki</item>
    </string-array>

    <string-array name="types_small">
        <item>@string/animal_usagi</item>
        <item>@string/animal_degu</item>
        <item>@string/animal_chinchira</item>
        <item>@string/animal_hamster</item>
        <item>@string/animal_harinezumi</item>
        <item>@string/animal_nezumi</item>
        <item>@string/animal_marmot</item>
        <item>@string/animal_risu</item>
        <item>@string/animal_momonga</item>
    </string-array>

    <string-array name="types_bird">
        <item>@string/animal_inko</item>
        <item>@string/animal_finchi</item>
        <item>@string/animal_moukin</item>
    </string-array>

    <string-array name="types_etc">
        <item>@string/animal_hachurui</item>
        <item>@string/animal_gyorui</item>
        <item>@string/animal_konchu</item>
    </string-array>

    <string-array name="all_types">
        <item>@string/animal_ushi</item>
        <item>@string/animal_uma</item>
        <item>@string/animal_buta</item>
        <item>@string/animal_hitsuji</item>
        <item>@string/animal_yagi</item>
        <item>@string/animal_inu</item>
        <item>@string/animal_neko</item>
        <item>@string/animal_kitsune</item>
        <item>@string/animal_tanuki</item>
        <item>@string/animal_usagi</item>
        <item>@string/animal_degu</item>
        <item>@string/animal_chinchira</item>
        <item>@string/animal_hamster</item>
        <item>@string/animal_harinezumi</item>
        <item>@string/animal_nezumi</item>
        <item>@string/animal_marmot</item>
        <item>@string/animal_risu</item>
        <item>@string/animal_momonga</item>
        <item>@string/animal_inko</item>
        <item>@string/animal_finchi</item>
        <item>@string/animal_moukin</item>
        <item>@string/animal_hachurui</item>
        <item>@string/animal_gyorui</item>
        <item>@string/animal_konchu</item>
    </string-array>

    <string name="g">g</string>
    <string name="kg">kg</string>
    <string name="mm">mm</string>
    <string name="cm">cm</string>
    <string name="m">m</string>

    <string-array name="weight_unit">
        <item>@string/g</item>
        <item>@string/kg</item>
    </string-array>

    <string-array name="length_unit">
        <item>@string/mm</item>
        <item>@string/cm</item>
        <item>@string/m</item>
    </string-array>

    <string name="icon_select">アイコン設定</string>
    <string name="icon_select_delete">アイコンを削除</string>
    <string name="icon_select_gallery">ギャラリーから選択</string>
    <string-array name="icon_select_array">
        <item>@string/icon_select_delete</item>
        <item>@string/icon_select_gallery</item>
    </string-array>

    <string name="death_day">命日</string>
    <string name="unit">単位</string>
    <string name="title_settings">- Settings -</string>
    <string name="unit_of_length">体長の単位</string>
    <string name="unit_of_weight">体重の単位</string>
    <string name="save">保存</string>
    <string name="delete_select_todo">選択したToDoを完了します</string>
    <string name="confirm_change_name">変更確認</string>
    <string name="confirm_change_name_message">名前が変更されています\n日誌データにも反映されます</string>

    <string name="setting_of_content">項目の設定</string>
    <string name="enabling_database">データベースを有効にする</string>
    <string name="content_name">項目名</string>
    <string name="database">データベース</string>
    <string name="setting_of_free1">フリー項目１の設定</string>
    <string name="disable">無効</string>
    <string name="setting_of_free2">フリー項目２の設定</string>
    <string name="display">表示</string>
    <string name="enable_death_day">命日を有効にする</string>
    <string name="display_death_day">命日の設定を表示します</string>
    <string name="free1">フリー１</string>
    <string name="free2">フリー２</string>

</resources>
