<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="jp.ryuk.deglog.ui.viewmodels.ChartViewModel" />

        <variable
            name="hasDiaries"
            type="Boolean" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="0dp"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            android:elevation="4dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/db_app_bar"
                style="@style/Widget.Deglog.Toolbar"
                app:layout_scrollFlags="noScroll"
                app:title="@string/title_chart" />

        </com.google.android.material.appbar.AppBarLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            android:fitsSystemWindows="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart_chart"
                isGone="@{!hasDiaries}"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="8dp"
                android:background="@color/colorBackground" />

            <TextView
                isGone="@{hasDiaries}"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/nothing_data" />

            <View
                android:id="@+id/chart_filter_bg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bgBlack"
                android:visibility="gone" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/chart_filter_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:elevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/secondaryLightColor"
                    android:clickable="true"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:paddingTop="56dp"
                    android:paddingBottom="8dp"
                    android:paddingEnd="16dp">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/select_chart"
                        android:textSize="18sp" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chip_group_chart"
                        android:layout_width="match_parent"
                        app:selectionRequired="true"
                        android:layout_height="wrap_content"
                        app:singleSelection="true">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_weight"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/weight" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_length"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/length" />

                    </com.google.android.material.chip.ChipGroup>

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/select_axis"
                        android:textSize="18sp" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chip_group_axis"
                        android:layout_width="match_parent"
                        app:selectionRequired="true"
                        android:layout_height="wrap_content"
                        app:singleSelection="true">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_day"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/time" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_record"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/recorded" />

                    </com.google.android.material.chip.ChipGroup>


                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/select_pets"
                        android:textSize="18sp" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chip_group_names"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </com.google.android.material.chip.ChipGroup>

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:id="@+id/chart_button_submit"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/apply" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:id="@+id/chart_filter_open"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/secondaryColor"
                android:elevation="6dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <TextView
                    android:id="@+id/chart_filter_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:text="@string/filter"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/chart_filter_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_more"
                    android:contentDescription="@string/icon_of_filter_open" />

            </LinearLayout>

        </FrameLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>